# ChronoTrain

./: .gitignore  README.md  pyproject.toml  task.md
source/: create_pdf.py  data_parser.py  logging_logic.py  main.py  secure_password.py
source/GUI/: chronotrain.py  login_gui.py  main_area.py
source/db/: create_db.py  db_connect.py  insert_user.py  readout.py  report_from_db.py  report_to_database.py  training.db  user_from_db.py
